# CPUGPU

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  compile.sh  main bad.cu  main good.cu  main.cu  profile.nsys-rep  run.sh
